--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "8.5.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.2"
