--- a/SecureChat/package.json
+++ b/SecureChat/package.json
@@ -8,7 +8,6 @@
     "start-app": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "keywords": [],
   "author": "Dylan Werelius & Victoria Guzman",
   "license": "ISC",
@@ -17,10 +16,10 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "8.5.1",
+    "node-fetch": "^2.7.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "ws": "^8.18.2",
-    "node-fetch": "2.6.7"
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "electron": "^35.0.3",
